added put action and put test for HotelMainResource #1111